<resources>
    <string name="app_name">A3</string>
    <string name="author">
        <a href="https://github.com/Leo-Shang">
            The author of this app is Leo Shang.
            This application is a tutorial about dynamic buttons in Android native development.
        </a>
    </string>
    <string name="title">Bad Apple Finder</string>
    <string name="creator">By Leo Shang</string>
    <string name="skip">Skip</string>
    <string name="found_count">Found X of Y mines.</string>
    <string name="scan_count"># Scan used: X</string>
    <string name="help">Help</string>
    <string name="explain">
        The application is a "Mine Sweeper" that detect bad apples in a N x N field. Try to use
         minimum number of scans to locate all bad apples.\nTapping on the cells to reveal bad apple
         or conduct a scan on that location. A scan will tell the number of bad apples in that row
         and column. When a bad apple is discovered, the button with scan result will update as well.
         Keep in mind scan accumulates when tapping on every cell, excluding:\n\t1. the tapped
         location contains a bad apple, or\n\t2. tapped location already scanned.\n Good Luck!
    </string>
    <string name="welcome_image">welcome_image</string>
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play game!</string>
    <string name="options">Options</string>
    <string name="main_menu_image">main menu image</string>
    <string name="settings">Settings</string>
    <string name="board_size">Board size</string>
    <string name="of_bad_apples"># of Bad Apples</string>
    <string name="dr_brain_fraser_s_youtube_channel">Dr. Brain Fraser\'s YouTube Channel</string>
    <string name="game_over">Game Over</string>
    <string name="congrat">Congratulations! You won!</string>
    <string name="won_image">won image</string>
</resources>