<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".components.OptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <TextView
            android:id="@+id/setting_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="15dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/board_size_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/board_size"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />

            <Spinner
                android:id="@+id/board_size_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mine_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/of_bad_apples"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />

            <Spinner
                android:id="@+id/mine_count_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>